azure-kubernetes-service/expose-sample-app-with-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-in-real-world-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod" ## depends on the cluster issuer you are using
spec:
  ingressClassName: nginx ## depends on the ingress controller you are using
  rules:
    - host: sample-app.k8s.learndevops.in
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /
            backend:
              service:
                name: kubernetes-in-real-world-service
                port:
                  number: 8080
  tls:
    - hosts:
        - sample-app.k8s.learndevops.in
      secretName: kubernetes-in-real-world-sample-app-tls
